checkmk-server/manifests/checkmk-server_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: checkmk
  name: checkmk
  namespace: checkmk
spec:
  replicas: 1
  selector:
    matchLabels:
      app: checkmk
  strategy:
    type: Recreate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: checkmk
    spec:
      containers:
      - image: checkmk/check-mk-raw:2.3.0
        imagePullPolicy: IfNotPresent
        name: checkmk
        ports:
        - containerPort: 5000
          name: webport
          protocol: TCP
        - containerPort: 8000
          name: agent-receiver
          protocol: TCP
        volumeMounts:
          - mountPath: "/omd/sites"
            name: checkmk-pv-storage
          - mountPath: "/opt/omd/sites/cmk/tmp"
            name: tmpfs
            subPath: cmk/tmp
          - mountPath: "/etc/localtime"
            name: localtime
            readOnly: true
      restartPolicy: Always
      imagePullSecrets:
      - name: pull-secret
      securityContext: {}
      volumes:
        - name: checkmk-pv-storage
          persistentVolumeClaim:
            claimName: checkmk-pv-claim
        - name: tmpfs
          emptyDir:
            medium: Memory
        - name: localtime
          hostPath:
            path: /etc/localtime
            type: File
#Volume called tmpfs with emptyDir set to use memory (medium: Memory). This creates a temporary file system in RAM that the container can use for temporary storage, as specified by tmpfs in Docker.
#Volume called localtime with hostPath pointing to /etc/localtime. This mounts the node's time file to the container, ensuring that the container uses the same time zone setting as the Docker node, in read-only mode (readOnly: true).
