checkmk-server/manifests/checkmk-server_service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: checkmk
  name: checkmk
  namespace: checkmk
spec:
  type: NodePort
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 5000
  - name: https
    port: 443
    protocol: TCP
    targetPort: 5000
  - name: agent-receiver
    port: 8000
    protocol: TCP
    targetPort: 8000
  selector:
    app: checkmk
