checkmk-server/manifests/checkmk-server_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: checkmk
  namespace: checkmk
spec:
  rules:
    # Adapt to your own system
    - host: checkmk.foo.bar
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: checkmk
                port:
                  number: 80
